ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "clientfront.hehe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: clientfront-service
            port:
              number: 80
  - host: "keycloak.hehe"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
